feat: update popup layout and enhance hotkey functionality

--- a/src/features/popup/popup.html
+++ b/src/features/popup/popup.html
@@ -38,17 +38,17 @@
       <h2>Bulk actions</h2>
       <div class="actions">
         <button id="btnExpand" class="btn">
-          Expand all turns <span class="kbd">Ctrl/Cmd+Shift+9</span>
+          Expand all turns <span class="kbd" data-hotkey="expand"></span>
         </button>
         <button id="btnCollapseOlder" class="btn">
-          Collapse above viewport <span class="kbd">Ctrl/Cmd+Shift+8</span>
+          Collapse above viewport <span class="kbd" data-hotkey="collapse"></span>
         </button>
       </div>
 
       <div class="row compact">
         <label for="beforeTarget" class="label">Collapse above…</label>
         <div class="field-inline" style="width: 100%;">
-          <input id="beforeTarget" type="text" placeholder="#23 or data-turn-id" />
+          <input id="beforeTarget" type="text" placeholder="Enter Chat#" />
           <button id="btnCollapseBeforeTarget" class="btn btn-nowrap">Collapse</button>
         </div>
       </div>
