--- a/src/features/popup/popup.html
+++ b/src/features/popup/popup.html
@@ -16,9 +16,20 @@
       <h1>ChatGPT Virtualizer</h1>
       <p class="sub">Keep long threads snappy</p>
     </div>
-    <button id="openShortcuts" class="btn" data-variant="ghost" title="Manage keyboard shortcuts">
-      <span class="btn__label">Shortcuts</span>
-    </button>
+    <div class="actions">
+      <button id="openShortcuts" class="btn" data-variant="ghost" title="Manage keyboard shortcuts">
+        <span class="btn__label">Shortcuts</span>
+      </button>
+      <button id="openHelp" class="btn" data-variant="ghost" aria-haspopup="dialog" aria-controls="helpDialog"
+        aria-label="Help" title="How Virtualizer works">
+        <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="none" stroke="currentColor"
+          stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M12 21a9 9 0 1 0 0-18 9 9 0 0 0 0 18Z" />
+          <path d="M9.1 9a3 3 0 0 1 5.8 1c0 1.5-1.2 2.2-2.1 2.7-.7.4-1.3.9-1.3 1.8" />
+          <path d="M12 17h.01" />
+        </svg>
+      </button>
+    </div>
     <label class="switch" title="Enable on this tab">
       <input id="enabled" type="checkbox" />
       <span class="slider"></span>
@@ -38,7 +49,15 @@
             <span class="btn__label">Apply</span>
           </button>
         </div>
-        <p class="help">New replies always remain visible. Pinned turns are never collapsed.</p>
+        <p class="hint">
+          <span class="btn__kbd kbd">Shift</span> + <span class="btn__kbd kbd">Click 🖱️</span>
+          a chevron to pin.
+          <span class="btn__kbd kbd">Alt</span> + <span class="btn__kbd kbd">Click 🖱️</span>
+          clears the pin.
+        </p>
+        <p id="statsLine" class="hint u-stack-sm" aria-live="polite">
+          Note: Stats show only for the currently active ChatGPT tab.
+        </p>
       </div>
     </section>
 
@@ -47,8 +66,8 @@
       <div class="actions">
         <button id="btnCollapseOlder" class="btn" data-variant="primary"
           title="Collapse everything that appears above the first visible message in the page right now.">
-          <span class="btn__label">Collapse above viewport</span> <span class="btn__kbd kbd"
-            data-hotkey="collapse">Ctrl+Shift+8</span>
+          <span class="btn__label">Collapse above viewport</span>
+          <span class="btn__kbd kbd" data-hotkey="collapse">Ctrl+Shift+8</span>
         </button>
         <button id="btnExpand" class="btn" data-variant="secondary"
           title="Temporarily expand every turn in the thread. Tip: Shift-click a chevron to pin a turn so it stays open.">
@@ -61,13 +80,12 @@
         <label for="beforeTarget" class="label">Collapse everything above…</label>
         <div class="field-inline u-grow">
           <input id="beforeTarget" class="field" type="text" placeholder="Chat #"
-            title="Use #number for position (1 = first turn), or paste a data-turn-id." />
+            title="Use #number for position (1 = first turn)." />
           <button id="btnCollapseBeforeTarget" class="btn btn-nowrap" data-variant="secondary"
             title="Collapse every earlier turn (above the chosen one).">
             <span class="btn__label">Collapse</span>
           </button>
         </div>
-        <p class="help">Examples: <code>1</code> keeps only the very first turn expanded;</p>
       </div>
 
       <p class="help">Bulk actions affect only the currently active ChatGPT tab.</p>
@@ -75,10 +93,70 @@
   </main>
 
   <footer class="foot">
-    <span class="foot-text">Tips: Shift-click a chevron to pin (while expanded). Alt-click clears the pin.</span>
+    <span class="foot-text">Tips: New replies always remain visible. Pinned turns are never collapsed. </span>
   </footer>
 
   <script type="module" src="popup.js"></script>
+
+  <dialog id="helpDialog" class="help-dialog" aria-labelledby="helpTitle">
+    <form method="dialog" class="help-body">
+      <header class="help-head">
+        <h2 id="helpTitle">ChatGPT Virtualizer — Help</h2>
+        <button id="closeHelp" class="btn" data-variant="ghost" value="close" title="Close">
+          <span class="btn__label">Close</span>
+        </button>
+      </header>
+
+      <section>
+        <h3>What this does</h3>
+        <p>Virtualizer keeps long threads responsive by collapsing older turns. You control how many recent turns stay
+          expanded, and you can pin important turns to keep them open.</p>
+      </section>
+
+      <section>
+        <h3>Auto-collapse rules</h3>
+        <p><b>Keep last N</b> — the newest N turns are kept expanded. New replies always stay visible.</p>
+        <p><b>Pins</b> — Shift-click a chevron to pin a turn while it's expanded; Alt-click clears the pin.</p>
+      </section>
+
+      <section>
+        <h3>Bulk actions</h3>
+        <ul>
+          <li><b>Collapse above viewport</b> — collapses everything you've scrolled past.</li>
+          <li><b>Expand all turns</b> — shows everything. Pin a few first if you plan to re-collapse.</li>
+          <li><b>Collapse above…</b> — type a <b>Chat #</b> (e.g., <code>#23</code>) to collapse earlier turns.</li>
+        </ul>
+      </section>
+
+      <section>
+        <h3>Examples for “Collapse above…”</h3>
+        <ul>
+          <li><code>#5</code> — collapses turns 1–4; keeps 5 and newer visible.</li>
+          <li><code>#23</code> — collapses turns 1–22; handy for jumping to a deep point.</li>
+          <li><code>#1</code> — no change; nothing is above the first (top) turn.</li>
+        </ul>
+      </section>
+
+      <section>
+        <h3>Shortcuts</h3>
+        <p>
+          Collapse above viewport: <span class="kbd" data-hotkey="collapse">Ctrl + Shift + 8</span>
+          <br /><br />
+          Expand all turns: <span class="kbd" data-hotkey="expand">Ctrl + Shift + 9</span>
+        </p>
+      </section>
+
+      <section>
+        <h3>Troubleshooting</h3>
+        <ul>
+          <li>Buttons disabled? Enable Virtualizer on this tab (top-right switch).</li>
+          <li>Stats show dashes? The tab is disabled or the page isn't a ChatGPT conversation.</li>
+          <li>Note: Stats show only for the currently active ChatGPT tab. Please enable the extension there and reopen
+            this popup. Try reloading the page.</li>
+        </ul>
+      </section>
+    </form>
+  </dialog>
 </body>
 
 </html>
